* Add the context model name in the screen context
* Use limit to expand tree
* Add keyword attribute to button tag
* Support field name on image tag
* Add option to check new version
* Show related record names for all windows
* Remove support of GTK+ 2.0
* Add icons on Many2One in editable tree
* Use translated values when exporting Reference and Selection fields

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Allow to export model and record name of Reference fields
* Re-position buttons on Binary/Image widget
* Improve treeview headers
* Update states of both toolbar and menu
* Improve toolbar order
* Make readonly, required and invalid widget themable
* Load user CSS theme
* Use profile name or login details in title

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Verify certificate with default CA
* Replace URL entry by a toolbar button

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Add support for GTK+ 3.0
* Add PYSON Widget
* Show records names in wizard title
* Add support for datetime_field to Reference
* Show non editable widget as insensitive
* Move info-bar at the bottom
* Manage readonly on fields translation dialog
* Restore tab default order when no manual change
* Call autocompletion when setting record value
* Remove database management
* Limit readonly state for xxx2Many
* Show records names in relate window title
* Add support for count on Action Window Domains
* Manage custom login process
* Add clear icon on Many2One
* Re-position icons on Many2One widget

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Improvement of charts design
* Timedelta uses 30 days for month
* Add all available encoding for import/export
* Add CSV parameters to export window
* Add DnD on import window
* Manage context model of ir.action.act_window
* Add Note
* Manage view_ids on tree view
* Use Apple key for copy/past of list

Version 3.8.0 - 2015-11-02